<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="maizn.fa.eservices.waterplant.activities.MainActivity">

    <Button
        android:text="@string/button_list_plants"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="58dp"
        android:id="@+id/button_list_plants"
        android:onClick="listPlants"/>

    <Button
        android:text="@string/button_populate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/populate_db"
        android:onClick="populate"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/button_add_plant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_list_plants"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:id="@+id/button_add_plant"
        android:onClick="createPlantActivity"/>

    <Button
        android:text="@string/button_delete_db"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/delete_db"
        android:onClick="deleteAllPlants"
        android:layout_marginTop="36dp"
        android:layout_below="@+id/populate_db"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/button_change_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/delete_db"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:id="@+id/button_change_date"
        android:onClick="changeDate"/>
</RelativeLayout>
