<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_plant_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="maizn.fa.eservices.waterplant.activities.PlantDetailActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:id="@+id/edit_plant_name"
        android:hint="@string/text_plant_name" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/text_watering_frequency"
        android:ems="10"
        android:layout_marginTop="26dp"
        android:id="@+id/edit_watering_frequency"
        android:layout_below="@+id/edit_plant_name"
        android:layout_alignLeft="@+id/edit_plant_name"
        android:layout_alignStart="@+id/edit_plant_name" />

    <Button
        android:text="@string/button_delete_plant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/update_plant"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="42dp"
        android:layout_marginEnd="42dp"
        android:id="@+id/delete_plant"
        android:onClick="deletePlant"/>

    <Button
        android:text="@string/button_update_plant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="57dp"
        android:layout_marginStart="57dp"
        android:id="@+id/update_plant"
        android:onClick="updatePlant"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="136dp" />

    <TextView
        android:text="@string/textview_last_watering"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_last_watering"
        android:layout_marginTop="33dp"
        android:textAlignment="center"
        android:layout_below="@+id/edit_watering_frequency"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/text_last_watering"
        android:layout_toRightOf="@+id/update_plant"
        android:layout_toEndOf="@+id/update_plant"
        android:layout_marginLeft="31dp"
        android:layout_marginStart="31dp"
        android:id="@+id/text_last_watering_value" />

    <TextView
        android:text="@string/text_next_watering_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_last_watering"
        android:layout_marginTop="34dp"
        android:id="@+id/textView_next_watering" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_next_watering_value"
        android:layout_alignBaseline="@+id/textView_next_watering"
        android:layout_alignBottom="@+id/textView_next_watering"
        android:layout_alignLeft="@+id/text_last_watering_value"
        android:layout_alignStart="@+id/text_last_watering_value" />

</RelativeLayout>
