<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_plant"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="maizn.fa.eservices.waterplant.activities.AddPlantActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/text_plant_name"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:id="@+id/edit_add_plant_name" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/text_watering_frequency"
        android:ems="10"
        android:layout_below="@+id/edit_add_plant_name"
        android:layout_alignRight="@+id/edit_add_plant_name"
        android:layout_alignEnd="@+id/edit_add_plant_name"
        android:layout_marginTop="44dp"
        android:id="@+id/edit_add_watering_frequency" />

    <Button
        android:text="@string/button_create_plant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/button_create_plant"
        android:onClick="createPlant"/>
</RelativeLayout>
